--- a/build.xml
+++ b/build.xml
@@ -4,31 +4,34 @@
 
   <target name="clean">
     <echo message="Suppression des fichiers issus de la compilation" />
-     <!-- delete rep bin -->
+     <!-- supprimer rep bin -->
     <delete dir="bin" />
-    <delete file="Tetris.jar" />
-  	
+  	<delete file="Tetris.jar"/>
   </target>
   
-  <target name="compile">
-  	<echo message="Compilation" />
-  	<!--on doit créer bin-->
-  	<mkdir dir="bin" />
-  	<javac srcdir="src" destdir="bin" executable="${JAVA_HOME}">
-  		<classpath>
-  			<pathelement location="lib/commons-lang3-3.5.jar" />
-  	    </classpath>
-  	</javac>
-  </target>
+	<target name="compile" >
+	    <echo message="Compilation du projet Tetris..." />
+	    
+	    <mkdir dir="bin" />
+		
+		<!-- spécifie ver 17 à cause des problèmes d'incompatibilité de ver -->
+	    <javac srcdir="src" destdir="bin" executable="$JAVA_HOME" source="17" target="17">
+	      <classpath>
+	        <pathelement location="lib/commons-lang3-3.5.jar" />
+	      </classpath>
+	    </javac>
+	  </target>
 
-  <target name="dist" depends="clean,compile">
-  	<echo message="Target dist" />
-  	<jar destfile="Tetris.jar" basedir="bin">
-  		<!--manifest>
-  			<attribute name="Main-Class" value="com.example.MainClass" />
-  	    </manifest-->
-  	</jar>
-  </target>
+	<target name="dist" depends="clean,compile">
+	  	<echo message="Target dist" />
+		
+	  	<jar destfile="Tetris.jar" basedir="bin">
+	  		<manifest>
+	  			<attribute name="Main-Class" value="fr.ubo.tetris.Tetris" />
+	  	        <attribute name="Class-Path" value="lib/commons-lang3-3.5.jar" />
+	  		</manifest>
+	  	</jar>
+	  </target>
 
 </project>
 
