--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,9 @@
 	<!--définition les paramétres -->
 	<property name="src.dir" location="src"/>
 	<property name="obj.dir" location="bin"/>
+	<property name="test.dir" location="test"/>
 	<property name="libs.dir" location="lib"/>
+	
 	<property name="main-class" value="fr.ubo.tetris.Tetris"/>
 	<property name="compile.classpath" value="${libs.dir}/commons-lang3-3.5.jar"/>
 	<property name="version" value="1.0.0"/>
@@ -41,6 +43,23 @@
 	    </javac>
 	  </target>
 
+	<target name="compile-test" depends="retrieve">
+		    <mkdir dir="${obj.dir}"/>
+		    <javac srcdir="${test.dir}" destdir="${obj.dir}" executable="$JAVA_HOME" source="17" target="17">
+		        <classpath>
+		            <fileset dir="${libs.dir}">
+		                <include name="*/junit-.jar"/> <!-- Inclure le JAR de JUnit -->
+		            </fileset>
+		            <fileset dir="${libs.dir}">
+		                <include name="*/.jar"/> <!-- Inclure toutes les autres bibliothèques -->
+		            </fileset>
+			        <pathelement location="${compile.classpath}" />
+		            <pathelement path="${obj.dir}"/> 
+		        </classpath>
+		    </javac>
+		</target>
+
+	
 	 <target name="dist" depends="clean,compile">
 	  	<echo message="Création d'un jar exécutable... " />
 		
