--- a/ivy.xml
+++ b/ivy.xml
@@ -5,6 +5,7 @@
 <info organisation="fr.ubo" module="compilation_de_tetris" status="integration"/>
 
 <dependencies>
+<dependency org="junit" name="junit" rev="4.13.2" conf="default"/>
 <dependency org="org.apache.commons" name="commons-lang3" rev="3.5" />
 </dependencies>
 
