--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,10 @@
 	<property name="src.dir" location="src"/>
 	<property name="obj.dir" location="bin"/>
 	<property name="test.dir" location="test"/>
+	<property name="test.results.dir" location="${obj.dir}/test-results"/>
+	<property name="test.reports" location="test-reports"/>
+	<property name="doc.dir" location="javadoc"/>
+
 	<property name="libs.dir" location="lib"/>
 	
 	<property name="main-class" value="fr.ubo.tetris.Tetris"/>
@@ -26,6 +30,10 @@
     <delete dir="${obj.dir}" />
   	<delete file="Tetris.jar"/>
   	<delete dir="${libs.dir}" />
+  	<delete dir="${test.reports}"/>
+  	<delete dir="${doc.dir}"/>
+    <delete dir="${test.results.dir}"/>
+
   	<mkdir dir="${libs.dir}" />
 
   </target>
@@ -36,7 +44,7 @@
 	    <mkdir dir="${obj.dir}" />
 		
 		<!-- spécifie ver 17 à cause des problèmes d'incompatibilité de ver -->
-	    <javac srcdir="${src.dir}" destdir="${obj.dir}" executable="$JAVA_HOME" source="17" target="17">
+	    <javac srcdir="${src.dir}" destdir="${obj.dir}" executable="${JAVA_HOME}/bin/javac" source="17" target="17">
 	      <classpath>
 	        <pathelement location="${compile.classpath}" />
 	      </classpath>
@@ -45,13 +53,14 @@
 
 	<target name="compile-test" depends="retrieve">
 		    <mkdir dir="${obj.dir}"/>
-		    <javac srcdir="${test.dir}" destdir="${obj.dir}" executable="$JAVA_HOME" source="17" target="17">
+		    <javac srcdir="${test.dir}" destdir="${obj.dir}" executable="${JAVA_HOME}/bin/javac" source="17" target="17">
 		        <classpath>
+		        	<fileset dir="${libs.dir}">
+		        	    <include name="junit-*.jar"/> 
+		        	</fileset>
+
 		            <fileset dir="${libs.dir}">
-		                <include name="*/junit-.jar"/> <!-- Inclure le JAR de JUnit -->
-		            </fileset>
-		            <fileset dir="${libs.dir}">
-		                <include name="*/.jar"/> <!-- Inclure toutes les autres bibliothèques -->
+		                <include name="*/.jar"/> 
 		            </fileset>
 			        <pathelement location="${compile.classpath}" />
 		            <pathelement path="${obj.dir}"/> 
@@ -59,6 +68,59 @@
 		    </javac>
 		</target>
 
+	  <target name="test" depends="compile-test">
+			    <mkdir dir="${test.results.dir}"/>
+	  	        <junit printsummary="on" haltonfailure="false" haltonerror="false" showoutput="true">
+	            	<classpath>
+	            		<pathelement path="${obj.dir}"/>
+	            		     <fileset dir="${libs.dir}">
+	            		        	<include name="junit-*.jar"/> 
+	            		     </fileset>
+	            		      <fileset dir="${libs.dir}">
+	            		        	 <include name="*.jar"/>
+	            		      </fileset>
+	            	</classpath>
+			        <formatter type="plain" />
+			    	<formatter type="xml" />
+			    	<batchtest>
+			    		<fileset dir="${obj.dir}">
+			    			<include name="**/Test*.class"/>
+			    		</fileset>
+			    	</batchtest>
+			    </junit>
+	  	   <!-- Copy Test class files to the test results directory -->
+	  	    <copy todir="${test.results.dir}">
+	  	        <fileset dir="${obj.dir}">
+	  	            <include name="**/Test*.class"/>
+	  	        </fileset>
+	  	    </copy>
+	</target> 
+	
+	<target name="test-reports" depends="test">
+	    <echo message="Création des test reports... " />
+	    <mkdir dir="${test.reports}"/>
+
+	    <junitreport todir="${test.reports}">
+	        <fileset dir="${test.reports}">
+	            <include name="**/TEST-*.xml" />
+	        </fileset>
+	        
+	        <report format="frames" todir="${test.reports}" />
+	    </junitreport>
+	</target>
+
+	<target name="javadoc" depends="compile">
+	    <echo message="Génèration de la documentation... " />
+           
+	        <mkdir dir="${doc.dir}"/>
+	        <javadoc destdir="${doc.dir}" sourcepath="${src.dir}" packagenames="fr.ubo.tetris">
+	            <classpath>
+	                <pathelement path="${compile.classpath}"/>
+	                <pathelement path="${obj.dir}"/>
+	            </classpath>
+	        </javadoc>
+	    </target>
+	
 	
 	 <target name="dist" depends="clean,compile">
 	  	<echo message="Création d'un jar exécutable... " />
@@ -73,5 +135,9 @@
 	  	</jar>
 	  </target>
 
+	 <target name="all" depends="dist,test-reports,javadoc">
+	        <echo message="DONE..."/>
+	  </target>
+	
 </project>
 
