--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
+stages:
+  - build
+  
 build:
   stage: build
-  tags:
   image: docker:24.0.2
   services:
     - docker:24.0.2-dind
@@ -10,4 +12,5 @@ build:
     - docker build -t $CI_REGISTRY_IMAGE/tetris:$CI_COMMIT_REF_SLUG .
   only:
     - branches
-  
+  tags: 
+    - dosi
