--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,17 @@
 stages:
   - build
+
+# Job pour construire l'image Docker
 build:
   stage: build
   image: docker:24.0.2
   services:
     - docker:24.0.2-dind
+  tags:
+    - dosi   # Placez le tag ici, à l'intérieur du job
   script:
-    # Authentification si nécessaire (décommenter si tu pushes vers un registre privé)
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-    - docker build -t $CI_REGISTRY_IMAGE/tetris:$CI_COMMIT_REF_SLUG .
+    # Authentification si nécessaire (décommenter si vous poussez vers un registre privé)
+    # - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+    - docker build -t registry.gitlab.com/dosi/pic/elouarghi-nada/tetris:$CI_COMMIT_REF_SLUG .
   only:
     - branches
-  tags: 
-    - dosi
