--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  -run
 
 # Job pour construire l'image Docker
 build:
@@ -8,10 +9,27 @@ build:
   services:
     - docker:24.0.2-dind
   tags:
-    - dosi   # Placez le tag ici, à l'intérieur du job
+    - dosi
   script:
     # Authentification si nécessaire (décommenter si vous poussez vers un registre privé)
     # - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker build -t registry.gitlab.com/dosi/pic/elouarghi-nada/tetris:$CI_COMMIT_REF_SLUG .
   only:
     - branches
+    
+# Job pour exécuter le conteneur
+run:
+  stage: run
+  image: docker:24.0.2
+  services:
+    - docker:24.0.2-dind
+  tags:
+    - dosi
+  script:
+    # Authentification si nécessaire (si vous tirez l'image du registre privé)
+    # - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
+    - docker pull registry.gitlab.com/dosi/pic/elouarghi-nada/tetris:$CI_COMMIT_REF_SLUG
+    - docker run -d registry.gitlab.com/dosi/pic/elouarghi-nada/tetris:$CI_COMMIT_REF_SLUG
+  only:
+    - branches
+
