--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: nadaelouarghi
+          password: dckr_pat_ePdBok-UeuRtjEqYjmEd0m_yG9g
 
       - name: Build Docker image
         run: |
