--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,10 @@ build:
   image: docker:24.0.2
   services:
     - docker:24.0.2-dind
+  tags:
+    - dosi
   script:
+    - docker info
     - docker build -t registry.gitlab.com/dosi/pic/elouarghi-nada/tetris:$CI_COMMIT_REF_SLUG .
   only:
     - branches
